# trader

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202601130001_initial.py  202601150001_timeframe_to_text.py  202601150002_regime_to_text.py
docs/: market_ingest_plan.md  prod_deploy.md
src/: __init__.py
src/ai_nlp_service/: __init__.py  main.py
src/log_watcher/: main.py
src/market_service/: __init__.py  main.py
src/news_service/: __init__.py  fetcher.py  main.py
src/pattern_service/: __init__.py  main.py
src/shared/: __init__.py  config.py  db.py  features.py  logger.py  models.py  notify.py  patterns.py  schemas.py
src/telegram_bot_service/: __init__.py  main.py
src/trader_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trader_service/: __init__.py  main.py
src/trainer_service/: __init__.py  main.py  train.py
