[project]
name = "trader-platform"
version = "0.1.0"
description = "Modular trading MVP: market/news/ML signals with FastAPI services."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "aiohttp>=3.9.5",
    "aiogram>=3.4.0",
    "alembic>=1.13.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "scikit-learn>=1.4.2",
    "shap>=0.44.1",
    "joblib>=1.3.2",
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "shared",
    "market_service",
    "pattern_service",
    "news_service",
    "ai_nlp_service",
    "trader_service",
    "trainer_service",
    "telegram_bot_service"
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
